fix(Chat): Fix gap between chat button and friends

--- a/ui/src/components/chat/style.scss
+++ b/ui/src/components/chat/style.scss
@@ -25,7 +25,7 @@
     .sidebar-chats-header {
         display: inline-flex;
         flex-direction: row;
-        min-height: 32%;
+        min-height: 38px;
         overflow-y: hidden;
         justify-content: space-between;
     }
